tests/error/enum_literal3.bz
enum E
{
	a,
	b,
}

function test()
{
	.a == .b;
}
